<package>
  <name>ghmm</name>
  <version>1.0.0</version>
  <description>ghmm</description>
  <maintainer email="example@gmail.com">Dizan Vasquez</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ghmm</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dizan Vasquez</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_simulator</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>trajectory_simulator</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>trajectory_simulator</test_depend> -->

</package>
