<package>
  <name>my_python_trials</name>
  <version>0.0.0</version>

  <description>
     my_python_trials
  </description>

  <maintainer email="arturo@todo.todo">arturo</maintainer>
  <license>BSD</license>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/my_python_trials</url>
  
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>

  
  <run_depend>rospy</run_depend>

	

  <!--rosdep name="joystick" />
  <rosdep name="ros-fuerte-joystick-drivers" /-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>


