<package>
  <name>my_python_trials</name>
  <version>1.0.0</version>
  <description>my_python_trials</description>
  <maintainer email="arturoescobedo.iq@gmail.com">arturo</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/my_python_trials</url>
  <!-- <url type="bugtracker"></url> -->

  <author>arturo</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->

</package>
