<package>
  <name>social_filter</name>
  <version>1.0.0</version>
  <description>social_filter</description>
  <maintainer email="example@gmail.com">Jorge Rios</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/social_filter</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jorge Rios</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_simulator</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_simulator</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>trajectory_simulator</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>ghmm</test_depend> -->

</package>
