<package>
  <name>trajectory_stabilization_devel</name>
  <version>1.0.0</version>
  <description>Trajectory Control library.
		It implements several motion controllers.
		Details on them can be find in the appropriate source files.</description>
  <maintainer email="example@gmail.com">Luca Marchetti</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/trajectory_stabilization_devel</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Luca Marchetti</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

<export>
    <cpp lflags="`pkg-config --libs trajectory_stabilization`" cflags="`pkg-config --cflags trajectory_stabilization`"/>
</export>

</package>
