<package>
  <name>user_intentions</name>
  <version>1.0.0</version>
  <description>user_intentions</description>
  <maintainer email="arturoescobedo.iq@gmail.com">Jesus-Arturo Escobedo-Cabello</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/user_intentions</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Arturo Escobedo</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>trajectory_simulator</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>message_generation</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nav_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>trajectory_simulator</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>nav_core</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>trajectory_simulator</test_depend> -->
  <!-- <test_depend>controller</test_depend> -->
  <!-- <test_depend>sound_play</test_depend> -->
  <!-- <test_depend>social_filter</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp"/>
</export>

</package>
