<package>
  <name>wheelchairint</name>
 <version>0.0.0</version>
  <description>
	
     wheelchair int contains some tools and  configuration files to use different kind of interfaces with the emotion wheelchair as the face direction estimation (pi_face_tracker), voice recognition (pocketsphinx), 
  </description>
  <maintainer email="arturo@todo.todo">arturo</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/wheelchairint</url>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot_teleop</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
 
	

  <!--depend package="head_pose_estimation"/>
  <depend package="rosbridge_server"/>
  <depend package="pocketsphinx"/--> <!--voice recognition package -->
  <!--depend package="pi_face_tracker"/>
  <depend package="ros2opencv"/>
  <depend package="turtlebot_teleop"/>
  <depend package="sound_play"/-->
  <!--<depend package="eigen"/>--> <!-- uncomment this when using ros electric instead of fuerte -->
  <!--depend package="openni_launch"/>
  <depend package="cv_bridge" />
  <rosdep name="opencv2.3"/>
  <rosdep name="gstreamer0.10-pocketsphinx"/-->

  <!-- The export tag contains other, unspecified, tags -->
  <export><!-- Other tools can request additional information be placed here -->
  </export>

</package>


